[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yvyra"
version = "0.1.0"
authors = [
  { name="Dorayakito", email="dorayakito@duck.com" },
]
description = "Biblioteca leve para manipulação de arquivos oto.ini"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dorayakito/YVYRA-oto.ini-Parser-Editor-Core"
